--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<center><main>
 	<div id="colorthings">
-      <h1><a href="logzin.html" target="_blank">The Kingsman</h1></a>
+      <h1>The Kingsman</h1>
 	</div>
       <h3>Agents :<span class="cursor">|</span></h3>
      <div class="process">
