--- a/Night.html
+++ b/Night.html
@@ -83,7 +83,7 @@
 
        <!-- Konten Pembukaan -->
        <p id="kalimat">Tumulog kana kase.. 🤭❤️     </p>
-       <p id="kalimat2">Yung tubig magiging ano, pag pinag gaganun 😍 ... Edi magiging ganyan yan tapos pag gising mo you will be awake.. 🥳</p>
+       <p id="kalimat2">Yung tubig magiging ano, pag pinag gaganun 😍 ... Edi magiging ganyan yan tapos pag gising mo maganda ka pa rin.. 🥳</p>
        <p id="kalimatbawah">Tulog na ❤️</p> 
        <p id="kalimatbawah2" class="sembunyi">Good Night ❤️</p> 
        <p id="kalimatbawah3" class="sembunyi">Kung ayaw mo edi don't ❤️</p> 
