--- a/Night.html
+++ b/Night.html
@@ -57,11 +57,11 @@
        async function pesanAwal() {
           suratin.style="display:none";ket.style="display:none";
           await swalst.fire({
-            title: 'Hoy, Ikaw! ❤️',
+            title: 'Hoy, TIPANIIII! ❤️',
             imageUrl: '' + stiker1.src,
          });   	
          await swalst.fire({
-            title: 'Oo ikaw na nagbabasa 😍',
+            title: 'Oo ikaw 😍',
             imageUrl: '' + stiker2.src,
          });
          await swalst.fire({
