--- a/Night.html
+++ b/Night.html
@@ -82,7 +82,7 @@
      <div><blockquote id='bq'>
 
        <!-- Konten Pembukaan -->
-       <p id="kalimat">Tumulog kana kase.. 🤭❤️     </p>
+       <p id="kalimat">SLEEEPP WELLZZZ BYEBYEE.. 🤭❤️     </p>
        <p id="kalimat2">Yung tubig magiging ano, pag pinag gaganun 😍 ... Edi magiging ganyan yan tapos pag gising mo maganda ka pa rin.. 🥳</p>
        <p id="kalimatbawah">Tulog na ❤️</p> 
        <p id="kalimatbawah2" class="sembunyi">Good Night ❤️</p> 
