--- a/Night.html
+++ b/Night.html
@@ -27,7 +27,7 @@
 <body>
 	
    <!-- Ganti Audio di sini -->
-   <audio src="https://feeldreams.github.io/fullsenyum.mp3" id="linkmp3" class="sembunyi"></audio>
+   <audio src="audio.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
      <!-- Wallpaper --><img src="https://i.pinimg.com/originals/91/30/59/913059e8bdf829e4a000c0b7d9137523.jpg" id="wallpaper"/><div id="beneranblur"></div>
