--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
      <div class="process">
  <div class="center-right">
  
-<a href="idex2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_ARTHUR_"></img></a>
-    <a href="idex2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_MARVIN_"></img></a>
-	<a href="idex2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_GALAHAD_"></img></a>
-  <a href="idex2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_LANCELOT_"></img></a>
-  <a href="idex2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_PERCIVAL_"></img></a>
+<a href="index2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_ARTHUR_"></img></a>
+    <a href="index2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_MARVIN_"></img></a>
+	<a href="index2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_GALAHAD_"></img></a>
+  <a href="index2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_LANCELOT_"></img></a>
+  <a href="index2.html" target="_blank"><img src="https://readme-typing-svg.herokuapp.com?color=6ee31f&font=Share Tech Mono&lines=----------AGENT//_PERCIVAL_"></img></a>
   </div>
   
 </div>
