--- a/index2.html
+++ b/index2.html
@@ -128,7 +128,7 @@ https://templatemo.com/tm-512-moonlight
                       <div class="author-image"><img src="img/prof.png" alt="Author Image"></div>
                   </div>
                   <div class="col-md-9">
-                      <h2>AGENT//_PERCIVAL_</h2>
+                      <h2 style="font-size:3vw;"/>AGENT//_PERCIVAL_</h2>
                       <p>A <strong>Kingsman</a></strong> with a kindest heart. He is also <em>the one with the cash</em>, He loves to spare his free time playing chess with the other Kingsman. <em>One of the founder of The Kingsman,</em> the oldest Kingsman.</p>
                       <div class="fb-btn"><a rel="nofollow" href="https://fb.com/templatemo">Contact Us</a></div>
                   </div>
@@ -187,3 +187,50 @@ https://templatemo.com/tm-512-moonlight
     </script>
 </body>
 </html>
+
+<script>
+			document.addEventListener("contextmenu",function(testing){
+			testing.preventDefault()
+			
+			});
+			
+			document.onkeydown = function(e) {
+
+if(event.keyCode == 123) {
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'S'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'H'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'A'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'F'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+return false;
+}
+}
+
+
+			
+			</script>
