--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <title>Kingsman Terminal</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="egg2.png" type="image/x-icon">
 <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank"><img src="https://img.icons8.com/external-prettycons-flat-prettycons/47/000000/external-human-shopping-prettycons-flat-prettycons.png"/></a>
 <a href="#" target="_blank"><img src="https://img.icons8.com/color/50/000000/console.png"/></a>
 
