--- a/index2.html
+++ b/index2.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-512-moonlight
                   </div>
                   <div class="col-md-9">
                       <h2 style="font-size:3vw;"/>AGENT//_GALAHAD_</h2>
-                      <p>A <strong>Kingsman</strong> who is obsessed with Walter White. <em>Reads the Dictionary</em> at his free time, also plays chess with Agent Arthur, and secretly  <em><a href="img/vidz.mp4" target="_blank">Inlove with one of our classmates.</a></em>  Also One of the founder of the Kingsman.
+                      <p>A <strong>Kingsman</strong> who is obsessed with Walter White. <em>Reads the Dictionary</em> at his free time, also plays chess with Agent Arthur, and secretly  <em><a href="img/vidz.mp4" target="_blank">Inlove with one of our classmates.</a></em>  Also One of the founder of the Kingsman. The Cringiest Kingsman
 					  <br/>
 					  <br/>
 					  ??????: Dark Horse
