--- a/index2.html
+++ b/index2.html
@@ -89,7 +89,7 @@ https://templatemo.com/tm-512-moonlight
             <div class="content first-content">
               <div class="container-fluid">
                   <div class="col-md-3">
-                      <div class="author-image"><img src="img/prof.png" alt="AGENTS GALAHAD'S PIC"></div>
+                      <div class="author-image"><img src="img/profgalahad.png" alt="AGENTS GALAHAD'S PIC"></div>
                   </div>
                   <div class="col-md-9">
                       <h2 style="font-size:3vw;"/>AGENT//_GALAHAD_</h2>
